kaleel added css

--- a/consumer-details.html
+++ b/consumer-details.html
@@ -1,7 +1,7 @@
 <h1 class="title">ഉപഭോഗവിവരങ്ങൾ</h1>
-<label for="">പ്രധാന ഉപഭോഗവസ്‌തുക്കൾ</label>
+<label class="input-label" for="">പ്രധാന ഉപഭോഗവസ്‌തുക്കൾ</label>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>പച്ചക്കറികൾ</h3>
     </label>
     <div id="productCardContainer1"></div>
@@ -57,7 +57,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>നാണ്യവിളകൾ</h3>
     </label>
     <div id="productCardContainer2"></div>
@@ -80,7 +80,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>പലവ്യഞ്ജനങ്ങൾ</h3>
     </label>
     <div id="productCardContainer3"></div>
@@ -104,7 +104,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>സോപ്പ്‌കളും ഡിറ്റർജന്റ്‌കളും</h3>
     </label>
     <div id="productCardContainer4"></div>
@@ -120,7 +120,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>എണ്ണകളും പാലുൽപ്പന്നങ്ങളും</h3>
     </label>
     <div id="productCardContainer5"></div>
@@ -137,7 +137,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>മൃഗസംരക്ഷണഉൽപ്പന്നങ്ങൾ</h3>
     </label>
     <div id="productCardContainer6"></div>
@@ -155,7 +155,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>പഴങ്ങൾ</h3>
     </label>
     <div id="productCardContainer7"></div>
