--- a/farming-details.html
+++ b/farming-details.html
@@ -1,6 +1,6 @@
 <h1 class="title">കാർഷികോത്പന്ന വിവരങ്ങൾ</h1>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>നാണ്യവിളകൾ</h3>
     </label>
     <div id="cropCardContainer1"></div>
@@ -40,7 +40,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>പച്ചക്കറിവിളകൾ</h3>
     </label>
     <div id="cropCardContainer2"></div>
@@ -84,7 +84,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>ഔഷധസസ്യങ്ങൾ</h3>
     </label>
     <div id="cropCardContainer3"></div>
@@ -97,7 +97,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>ധാന്യവിളകൾ</h3>
     </label>
     <div id="cropCardContainer4"></div>
@@ -108,7 +108,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">
+    <label class="input-label" for="">
         <h3>മൃഗസംരക്ഷണം</h3>
     </label>
     <div id="cropCardContainer5"></div>
