--- a/household-details.html
+++ b/household-details.html
@@ -1,41 +1,45 @@
 <h1 class="title">ഗാർഹികവിവരങ്ങൾ</h1>
 <div class="form-element">
-    <label for="">വീടിന്റെ മേൽക്കൂര</label>
-    <select id="roof" name="">
-        <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
-        <option value="കോൺക്രീറ്റ്">കോൺക്രീറ്റ്</option>
-        <option value="ഓട്">ഓട്</option>
-        <option value="ഷീറ്റ്">ഷീറ്റ്</option>
-        <option value="ഓല">ഓല</option>
-    </select>
+    <label class="input-label" for="">വീടിന്റെ മേൽക്കൂര</label>
+    <div class="select-control">
+        <select class="form-control" id="roof" name="">
+            <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
+            <option value="കോൺക്രീറ്റ്">കോൺക്രീറ്റ്</option>
+            <option value="ഓട്">ഓട്</option>
+            <option value="ഷീറ്റ്">ഷീറ്റ്</option>
+            <option value="ഓല">ഓല</option>
+        </select>
+    </div>
 </div>
 <div class="form-element">
-    <label for="">വീടിന്റെ നിലം</label>
-    <select id="floor" name="">
-        <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
-        <option value="മണ്ണ്">മണ്ണ്</option>
-        <option value="സിമന്റ് /കാവി">സിമന്റ് /കാവി</option>
-        <option value="ടൈൽസ്">ടൈൽസ്</option>
-        <option value="ഗ്രാനേറ്റ് /മാർബിൾ">ഗ്രാനേറ്റ് /മാർബിൾ</option>
-    </select>
+    <label class="input-label" for="">വീടിന്റെ നിലം</label>
+    <div class="select-control">
+        <select class="form-control" id="floor" name="">
+            <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
+            <option value="മണ്ണ്">മണ്ണ്</option>
+            <option value="സിമന്റ് /കാവി">സിമന്റ് /കാവി</option>
+            <option value="ടൈൽസ്">ടൈൽസ്</option>
+            <option value="ഗ്രാനേറ്റ് /മാർബിൾ">ഗ്രാനേറ്റ് /മാർബിൾ</option>
+        </select>
+    </div>
 </div>
 <div class="form-element">
-    <label for="">വീടിന്റെ വിസ്തീർണം</label>
-    <input type="number">
+    <label class="input-label" for="">വീടിന്റെ വിസ്തീർണം</label>
+    <input class="form-control" type="number">
 </div>
 <div class="form-element">
-    <label for="">തുറന്ന ടെറസ്സ് വിസ്തീർണം</label>
-    <input type="number">
+    <label class="input-label" for="">തുറന്ന ടെറസ്സ് വിസ്തീർണം</label>
+    <input class="form-control" type="number">
 </div>
 <div class="form-element">
-    <label for="">മാസാന്ത വൈദ്യുതി ചാർജ്</label>
-    <input type="number">
+    <label class="input-label" for="">മാസാന്ത വൈദ്യുതി ചാർജ്</label>
+    <input class="form-control" type="number">
 </div>
 <div class="form-element">
-    <label for="">ആകെ ഭൂവിസ്തീർണം</label>
-    <input type="text">
+    <label class="input-label" for="">ആകെ ഭൂവിസ്തീർണം</label>
+    <input class="form-control" type="text">
 </div>
 <div class="form-element">
-    <label for="">കൃഷിയോഗ്യമായ ഭൂവിസ്തീർണം</label>
-    <input type="text">
+    <label class="input-label" for="">കൃഷിയോഗ്യമായ ഭൂവിസ്തീർണം</label>
+    <input class="form-control" type="text">
 </div>
