--- a/living-comfort-details.html
+++ b/living-comfort-details.html
@@ -1,6 +1,6 @@
 <h1 class="title">ജീവിതസൗകര്യവിവരങ്ങൾ</h1>
 <div class="form-element">
-    <label for="">വീട്ടുപകരണങ്ങൾ</label>
+    <label class="input-label" for="">വീട്ടുപകരണങ്ങൾ</label>
     <table class="goods-tbl" id="goodsTable">
         <tr>
             <th>ഇനം </th>
