--- a/personal-details.html
+++ b/personal-details.html
@@ -1,44 +1,44 @@
 <h1 class="title">വ്യക്തിഗതവിവരങ്ങൾ</h1>
 <div class="form-element">
-    <label for="">ഗൃഹനാഥന്റെ പേര് </label>
-    <input type="text" placeholder="">
+    <label class="input-label" for="">ഗൃഹനാഥന്റെ പേര് </label>
+    <input class="form-control" type="text" placeholder="">
 </div>
 <div class="form-element">
-    <label for="">വിലാസം</label>
-    <input type="text" placeholder="വീട്ടുപേര് ...">
-    <input type="text" placeholder="സ്ഥലം...">
-    <input type="text" placeholder="തബാൽ ആഫീസ് ...">
-    <input type="text" placeholder="തബാൽ നമ്പർ...">
+    <label class="input-label" for="">വിലാസം</label>
+    <input class="form-control" type="text" placeholder="വീട്ടുപേര് ...">
+    <input class="form-control" type="text" placeholder="സ്ഥലം...">
+    <input class="form-control" type="text" placeholder="തബാൽ ആഫീസ് ...">
+    <input class="form-control" type="text" placeholder="തബാൽ നമ്പർ...">
 </div>
 <div class="form-element">
-    <label for="">വീട്ടുനമ്പർ</label>
-    <input type="text">
+    <label class="input-label" for="">വീട്ടുനമ്പർ</label>
+    <input class="form-control" type="text">
 </div>
 <div class="form-element">
-    <label for="">വാർഡ്</label>
-    <input type="text">
+    <label class="input-label" for="">വാർഡ്</label>
+    <input class="form-control" type="text">
 </div>
 <div class="form-element">
-    <label for="">പഞ്ചായത്ത്/നഗരസഭാ</label>
-    <input type="text">
+    <label class="input-label" for="">പഞ്ചായത്ത്/നഗരസഭാ</label>
+    <input class="form-control" type="text">
 </div>
 <div class="form-element">
-    <label for="">വില്ലേജ്</label>
-    <input type="text">
+    <label class="input-label" for="">വില്ലേജ്</label>
+    <input class="form-control" type="text">
 </div>
 <div class="form-element">
-    <label for="">നിയമസഭാമണ്ഡലം</label>
-    <input type="text">
+    <label class="input-label" for="">നിയമസഭാമണ്ഡലം</label>
+    <input class="form-control" type="text">
 </div>
 <div class="form-element">
-    <label for="">ബ്ലോക്ക്</label>
-    <input type="text">
+    <label class="input-label" for="">ബ്ലോക്ക്</label>
+    <input class="form-control" type="text">
 </div>
 <div class="form-element">
-    <label for="">താലൂക്ക്</label>
-    <input type="text">
+    <label class="input-label" for="">താലൂക്ക്</label>
+    <input class="form-control" type="text">
 </div>
 <div class="form-element">
-    <label for="">ജില്ല</label>
-    <input type="text">
+    <label class="input-label" for="">ജില്ല</label>
+    <input class="form-control" type="text">
 </div>
