--- a/watersource-details.html
+++ b/watersource-details.html
@@ -1,6 +1,6 @@
 <h1 class="title">ജലവിഭവ വിവരങ്ങൾ</h1>
 <div class="form-element">
-    <label for="">വാട്ടർ ടാങ്കിന്റെ ടൈപ്പ്</label>
+    <label class="input-label" for="">വാട്ടർ ടാങ്കിന്റെ ടൈപ്പ്</label>
     <select id="waterTank" name="">
         <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
         <option value="സിന്തറ്റിക്">സിന്തറ്റിക്</option>
@@ -8,11 +8,11 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">വാട്ടർ ടാങ്കിന്റെ അളവ്</label>
-    <input type="number">
+    <label class="input-label" for="">വാട്ടർ ടാങ്കിന്റെ അളവ്</label>
+    <input class="form-control" type="number">
 </div>
 <div class="form-element">
-    <label for="">കുടിവെള്ള സ്രോതസ്</label>
+    <label class="input-label" for="">കുടിവെള്ള സ്രോതസ്</label>
     <select id="waterSourse" name="">
         <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
         <option value="കിണർ">കിണർ</option>
@@ -22,7 +22,7 @@
     </select>
 </div>
 <div class="form-element">
-    <label for="">ജലലഭ്യത</label>
+    <label class="input-label" for="">ജലലഭ്യത</label>
     <select id="waterAvailability" name="">
         <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
         <option value="ഡിസംബർ വരെ">ഡിസംബർ വരെ</option>
@@ -34,6 +34,6 @@
     </select>
 </div>
 <div class="form-element">
-    <label for=""> ഒരു ദിവസം ഉപയോഗിക്കുന്ന വെള്ളത്തിന്റെ അളവ്</label>
-    <input type="number">
+    <label class="input-label" for=""> ഒരു ദിവസം ഉപയോഗിക്കുന്ന വെള്ളത്തിന്റെ അളവ്</label>
+    <input class="form-control" type="number">
 </div>
