--- a/watersource-details.html
+++ b/watersource-details.html
@@ -1,11 +1,13 @@
 <h1 class="title">ജലവിഭവ വിവരങ്ങൾ</h1>
 <div class="form-element">
     <label class="input-label" for="">വാട്ടർ ടാങ്കിന്റെ ടൈപ്പ്</label>
-    <select id="waterTank" name="">
-        <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
-        <option value="സിന്തറ്റിക്">സിന്തറ്റിക്</option>
-        <option value="കോൺക്രീറ്റ്">കോൺക്രീറ്റ്</option>
-    </select>
+    <div class="select-control">
+        <select id="waterTank" name="">
+            <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
+            <option value="സിന്തറ്റിക്">സിന്തറ്റിക്</option>
+            <option value="കോൺക്രീറ്റ്">കോൺക്രീറ്റ്</option>
+        </select>
+    </div>
 </div>
 <div class="form-element">
     <label class="input-label" for="">വാട്ടർ ടാങ്കിന്റെ അളവ്</label>
@@ -13,25 +15,29 @@
 </div>
 <div class="form-element">
     <label class="input-label" for="">കുടിവെള്ള സ്രോതസ്</label>
-    <select id="waterSourse" name="">
-        <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
-        <option value="കിണർ">കിണർ</option>
-        <option value="കുഴൽ കിണർ">കുഴൽ കിണർ</option>
-        <option value="പൊതു ടാപ്">പൊതു ടാപ്</option>
-        <option value="പദ്ധതി കണക്ഷൻ">പദ്ധതി കണക്ഷൻ</option>
-    </select>
+    <div class="select-control">
+        <select id="waterSourse" name="">
+            <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
+            <option value="കിണർ">കിണർ</option>
+            <option value="കുഴൽ കിണർ">കുഴൽ കിണർ</option>
+            <option value="പൊതു ടാപ്">പൊതു ടാപ്</option>
+            <option value="പദ്ധതി കണക്ഷൻ">പദ്ധതി കണക്ഷൻ</option>
+        </select>
+    </div>
 </div>
 <div class="form-element">
     <label class="input-label" for="">ജലലഭ്യത</label>
-    <select id="waterAvailability" name="">
-        <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
-        <option value="ഡിസംബർ വരെ">ഡിസംബർ വരെ</option>
-        <option value="ജനുവരി വരെ">ജനുവരി വരെ</option>
-        <option value="ഫെബ്രുവരി വരെ">ഫെബ്രുവരി വരെ</option>
-        <option value="മാർച്ച് വരെ">മാർച്ച് വരെ</option>
-        <option value="ഏപ്രിൽ വരെ">ഏപ്രിൽ വരെ</option>
-        <option value="വര്ഷം മുഴുവൻ">വര്ഷം മുഴുവൻ</option>
-    </select>
+    <div class="select-control">
+        <select id="waterAvailability" name="">
+            <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
+            <option value="ഡിസംബർ വരെ">ഡിസംബർ വരെ</option>
+            <option value="ജനുവരി വരെ">ജനുവരി വരെ</option>
+            <option value="ഫെബ്രുവരി വരെ">ഫെബ്രുവരി വരെ</option>
+            <option value="മാർച്ച് വരെ">മാർച്ച് വരെ</option>
+            <option value="ഏപ്രിൽ വരെ">ഏപ്രിൽ വരെ</option>
+            <option value="വര്ഷം മുഴുവൻ">വര്ഷം മുഴുവൻ</option>
+        </select>
+    </div>
 </div>
 <div class="form-element">
     <label class="input-label" for=""> ഒരു ദിവസം ഉപയോഗിക്കുന്ന വെള്ളത്തിന്റെ അളവ്</label>
