kaleel made changes style 2nd time

--- a/consumer-details.html
+++ b/consumer-details.html
@@ -6,7 +6,7 @@
     </label>
     <div id="productCardContainer1"></div>
     <div class="select-control">
-        <select id="products1" name="" oninput="addProducts(1)">
+        <select class="form-control" id="products1" name="" oninput="addProducts(1)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="ഉരുളക്കിഴങ്ങ്">ഉരുളക്കിഴങ്ങ്</option>
             <option value="ക്യാരറ്റ്">ക്യാരറ്റ്</option>
@@ -64,7 +64,7 @@
     </label>
     <div id="productCardContainer2"></div>
     <div class="select-control">
-        <select id="products2" name="" oninput="addProducts(2)">
+        <select class="form-control" id="products2" name="" oninput="addProducts(2)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="കുരുമുളക്">കുരുമുളക്</option>
             <option value="ജാതി">ജാതി</option>
@@ -89,7 +89,7 @@
     </label>
     <div id="productCardContainer3"></div>
     <div class="select-control">
-        <select id="products3" name="" oninput="addProducts(3)">
+        <select class="form-control" id="products3" name="" oninput="addProducts(3)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="അരി">അരി</option>
             <option value="ആട്ട">ആട്ട</option>
@@ -115,7 +115,7 @@
     </label>
     <div id="productCardContainer4"></div>
     <div class="select-control">
-        <select id="products4" name="" oninput="addProducts(4)">
+        <select class="form-control" id="products4" name="" oninput="addProducts(4)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="അലക്കപൊടി">അലക്കപൊടി</option>
             <option value="സാവോൻ">സാവോൻ</option>
@@ -133,7 +133,7 @@
     </label>
     <div id="productCardContainer5"></div>
     <div class="select-control">
-        <select id="products5" name="" oninput="addProducts(5)">
+        <select class="form-control" id="products5" name="" oninput="addProducts(5)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="വെളിച്ചെണ്ണ">വെളിച്ചെണ്ണ</option>
             <option value="നെയ്യ്">നെയ്യ്</option>
@@ -152,7 +152,7 @@
     </label>
     <div id="productCardContainer6"></div>
     <div class="select-control">
-        <select id="products6" name="" oninput="addProducts(6)">
+        <select class="form-control" id="products6" name="" oninput="addProducts(6)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="ഇറച്ചിക്കോഴി">ഇറച്ചിക്കോഴി</option>
             <option value="ബീഫ്">ബീഫ്</option>
@@ -172,7 +172,7 @@
     </label>
     <div id="productCardContainer7"></div>
     <div class="select-control">
-        <select id="products7" oninput="addProducts(7)">
+        <select class="form-control" id="products7" oninput="addProducts(7)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="മാവ്">മാവ്</option>
             <option value="ഞാവൽ">ഞാവൽ</option>
