--- a/farming-details.html
+++ b/farming-details.html
@@ -5,7 +5,7 @@
     </label>
     <div id="cropCardContainer1"></div>
     <div class="select-control">
-        <select id="crops1" name="" oninput="addCrops(1)">
+        <select class="form-control" id="crops1" name="" oninput="addCrops(1)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="തെങ്ങ്">തെങ്ങ്</option>
             <option value="കവുങ്ങ്">കവുങ്ങ്</option>
@@ -47,7 +47,7 @@
     </label>
     <div id="cropCardContainer2"></div>
     <div class="select-control">
-        <select id="crops2" name="" oninput="addCrops(2)">
+        <select class="form-control" id="crops2" name="" oninput="addCrops(2)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="കതളിവാഴ">കതളിവാഴ</option>
             <option value="നേന്ത്രവാഴ">നേന്ത്രവാഴ</option>
@@ -93,7 +93,7 @@
     </label>
     <div id="cropCardContainer3"></div>
     <div class="select-control">
-        <select id="crops3" name="" oninput="addCrops(3)">
+        <select class="form-control" id="crops3" name="" oninput="addCrops(3)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="കറ്റാർവാഴ">കറ്റാർവാഴ</option>
             <option value="ആര്യവേപ്പ്">ആര്യവേപ്പ്</option>
@@ -108,7 +108,7 @@
     </label>
     <div id="cropCardContainer4"></div>
     <div class="select-control">
-        <select id="crops4" name="" oninput="addCrops(4)">
+        <select class="form-control" id="crops4" name="" oninput="addCrops(4)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="കാപ്പി">കാപ്പി</option>
             <option value="നെല്ല്">നെല്ല്</option>
@@ -121,7 +121,7 @@
     </label>
     <div id="cropCardContainer5"></div>
     <div class="select-control">
-        <select id="crops5" name="" oninput="addCrops(5)">
+        <select class="form-control" id="crops5" name="" oninput="addCrops(5)">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="ഇറച്ചിക്കോഴി">ഇറച്ചിക്കോഴി</option>
             <option value="മുട്ടക്കോഴി">മുട്ടക്കോഴി</option>
