--- a/living-comfort-details.html
+++ b/living-comfort-details.html
@@ -9,7 +9,7 @@
 
     </table>
     <div class="select-control">
-        <select id="goods" oninput="addGoodsTable()" name="">
+        <select class="form-control" id="goods" oninput="addGoodsTable()" name="">
             <option value="" selected>തിരഞ്ഞെടുക്കുക</option>
             <option value="ഫാൻ">ഫാൻ</option>
             <option value="ടീവി">ടീവി</option>
