--- a/personal-details.html
+++ b/personal-details.html
@@ -3,7 +3,7 @@
     <label class="input-label" for="">ഗൃഹനാഥന്റെ പേര് </label>
     <input class="form-control" type="text" placeholder="">
 </div>
-<div class="form-element">
+<div class="form-element form-address">
     <label class="input-label" for="">വിലാസം</label>
     <input class="form-control" type="text" placeholder="വീട്ടുപേര് ...">
     <input class="form-control" type="text" placeholder="സ്ഥലം...">
