--- a/watersource-details.html
+++ b/watersource-details.html
@@ -2,7 +2,7 @@
 <div class="form-element">
     <label class="input-label" for="">വാട്ടർ ടാങ്കിന്റെ ടൈപ്പ്</label>
     <div class="select-control">
-        <select id="waterTank" name="">
+        <select class="form-control" id="waterTank" name="">
             <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
             <option value="സിന്തറ്റിക്">സിന്തറ്റിക്</option>
             <option value="കോൺക്രീറ്റ്">കോൺക്രീറ്റ്</option>
@@ -16,7 +16,7 @@
 <div class="form-element">
     <label class="input-label" for="">കുടിവെള്ള സ്രോതസ്</label>
     <div class="select-control">
-        <select id="waterSourse" name="">
+        <select class="form-control" id="waterSourse" name="">
             <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
             <option value="കിണർ">കിണർ</option>
             <option value="കുഴൽ കിണർ">കുഴൽ കിണർ</option>
@@ -28,7 +28,7 @@
 <div class="form-element">
     <label class="input-label" for="">ജലലഭ്യത</label>
     <div class="select-control">
-        <select id="waterAvailability" name="">
+        <select class="form-control" id="waterAvailability" name="">
             <option value="" selected disabled hidden> തിരഞ്ഞെടുക്കുക</option>
             <option value="ഡിസംബർ വരെ">ഡിസംബർ വരെ</option>
             <option value="ജനുവരി വരെ">ജനുവരി വരെ</option>
