some changes shamnad pointed out is fixed some are still to be fixed

--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@
 					<div class="form-element">
 						<label class="input-label" for="">ജനന തിയ്യതി</label>
 						<div class="form-date">
-							<input class="form-control" id="dobInput" type="date" placeholder="dd/mm/yyyy">
+							<input class="form-control" id="dobInput" type="date">
 						</div>
 					</div>
 					<div class="form-element">
@@ -133,7 +133,7 @@
 		<div class="modal-content">
 			<form id="addCropForm">
 				<div>
-					<h1 class="title">കാര്ഷികോത്പന്നം - അളവ്</h1>
+					<h1 id= titleCrop class="title"></h1>
 					<div class="form-element">
 						<label class="input-label" for="">എണ്ണം</label>
 						<input class="form-control" id="countCropInput" type="number" placeholder="">
@@ -167,7 +167,7 @@
 		<div class="modal-content">
 			<form id="addProductForm">
 				<div>
-					<h1 class="title">ഉപഭോക്തൃ ഉത്പന്നം - അളവ്</h1>
+					<h1 id="titleProduct" class="title"></h1>
 					<div class="form-element">
 						<label class="input-label" for="">എണ്ണം</label>
 						<input class="form-control" id="countProductInput" type="number" placeholder="">
